--- a/src/components/PasswordGenerator.css
+++ b/src/components/PasswordGenerator.css
@@ -1,4 +1,4 @@
-form {
+.pwd-form {
   border: 2px solid grey;
   width: 60%;
   margin: auto;
@@ -10,6 +10,6 @@ form {
   margin: auto;
   width: 16%;
 }
-form #txt {
+.pwd-form #txt {
   padding: 5px;
 }
